# http_proxy

./: .gitignore  MITM_FEASIBILITY.md  README.md  REFACTORING.md  proxy_server.py  pyproject.toml
builders/: __init__.py  response_builder.py
handlers/: __init__.py  http_handler.py  https_handler.py
parsers/: __init__.py  request_parser.py
utils/: __init__.py  logger.py
