[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.31.0"
]

[project.scripts]
proxy-server = "proxy_server:main"

[tool.setuptools]
packages = ["handlers", "parsers", "builders", "utils"]
py-modules = ["proxy_server"]

[tool.uv]
package = true
